Fix components, etc

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,103 +1,119 @@
 ---
+import Li from "./OutwardLink.astro";
+import Fl from "./FooterLink.astro";
 type Props = Record<string, never>;
-
 ---
-
 <footer>
   <div class="footer-wrapper">
-    <div class="source-code">
-      <h3>Source code</h3>
-      <menu>
-        <li class="github link">
-          <a href="https://github.com/iso24229/iso24229.github.io" target="_blank">
-            <div class="icon-social">
-              <img src="/assets/icons/github.svg" />
-            </div>
-            This website
-          </a>
-        </li>
-        <li class="github link">
-          <a href="https://github.com/iso24229/iso24229-registry" target="_blank">
-          <div class="icon-social">
-            <img src="/assets/icons/github.svg" />
-          </div>
-            Registry data
-          </a>
-        </li>
-      </menu>
-    </div>
-    <div class="created-by">
-      <h6 class="created-by-text">
+    <section class="created-by">
+      <h2 class="created-by-text">
         Powered by
-      </h6>
+      </h2>
       <ul>
-        <li>
-          <a href="https://www.calconnect.org/" target="_blank">
-            CalConnect
-          </a>
-        </li>
-        <li>
-          <a href="https://open.ribose.com" target="_blank">
-            Ribose Inc
-          </a>
-        </li>
+        <Li href="https://www.calconnect.org/">
+          CalConnect
+        </Li>
+        <Li href="https://open.ribose.com">
+          Ribose Inc
+        </Li>
       </ul>
-    </div>
+    </section>
 
-    <menu class="social-links">
-      <h3>Links</h3>
+    <menu class="source-code-and-related">
       <li>
-        <a href="https://twitter.com/isostandards" target="_blank">
-          𝕏.com
-        </a>
+        <menu>
+          <h2>Source code</h2>
+          <Li href="https://github.com/iso24229/iso24229.github.io" icon="github">
+            This website
+          </Li>
+          <Li href="https://github.com/iso24229/iso24229-registry" icon="github">
+            Registry data
+          </Li>
+        </menu>
       </li>
+
       <li>
-        <a href="https://interscript.org" target="_blank">
-          Interscript
-        </a>
+        <menu>
+          <h2>Related projects</h2>
+          <Li href="https://interscript.org">
+            Interscript
+          </Li>
+          <Li href="https://extensions.paneron.org/e/@paneron/extension-wlcs-registry/">
+            Extension for Paneron
+          </Li>
+        </menu>
       </li>
     </menu>
 
-    <div class="official-affiliation-notice">
-      <!-- <h3>Legal</h3> -->
+    <menu class="social-links">
+      <h2>Social</h2>
+      <Li href="https://𝕏.com/isostandards">
+        𝕏.com (Twitter)
+      </Li>
+      <Li href="https://www.linkedin.com/company/isostandards" icon="linkedin">
+        LinkedIn
+      </Li>
+    </menu>
+
+    <menu class="legal-links">
+      <h2>Legal</h2>
+      <Fl href="/privacy">
+        Privacy Policy
+      </Fl>
+      <Fl href="/tos">
+        Terms of Service
+      </Fl>
+    </menu>
+
+    <section class="official-affiliation-notice">
       <div class="logo-iso">
         <a href="https://www.iso.org" target="_blank"><img class="logo-iso" src="/assets/logos/iso-logo-black.svg" /></a>
       </div>
       <div class="copyright-notice">
-        <div>
         © All Rights Reserved
-        </div>
       </div>
       <div class="working-group-text">
         <a href="https://www.iso.org" target="_blank">ISO</a> / <a href="https://www.iso.org/committee/48750.html" target="_blank">TC 46</a> / WG 3
       </div>
-      <!-- <menu> -->
-      <!--   <li> -->
-      <!--     <a href="/privacy"> -->
-      <!--       Privacy Policy -->
-      <!--     </a> -->
-      <!--   </li> -->
-      <!--   <li> -->
-      <!--     <a href="/tos"> -->
-      <!--       Terms of Service -->
-      <!--     </a> -->
-      <!--   </li> -->
-      <!-- </menu> -->
-    </div>
+    </section>
+
   </div>
 </footer>
-<style lang="scss" is:global>
+<style lang="scss">
 
 footer {
   padding: 2rem var(--main-padding-lr);
 
   border-top: 2px solid black;
   width: 100%;
+}
 
-  div {
-    display: inline-block;
-    vertical-align: middle;
-  }
+.footer-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+ul, menu {
+  padding: 0;
+  list-style-type: none;
+}
+
+li + li {
+  padding-top: 1.5rem;
+}
+
+h2 {
+  font-size: 0.9rem;
+}
+
+.created-by-text {
+  text-transform: uppercase;
+  font-size: 0.7rem;
+  padding-bottom: 0.1rem;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  padding-bottom: 0.2rem;
 }
 
 .official-affiliation-notice {
@@ -105,41 +121,13 @@ footer {
   flex-direction: column;
 }
 
-.footer-wrapper {
-  display: flex;
-  justify-content: space-between;
-
-  ul, menu {
-    padding: 0;
-    list-style-type: none;
-    li {
-      padding-top: 0.5rem;
-    }
-  }
-
-  .created-by-text {
-    text-transform: uppercase;
-    font-size: 0.7rem;
-    padding-bottom: 0.1rem;
-  }
-
-  h3 {
-    padding-bottom: 0.2rem;
-  }
-
-  .icon-social {
-    display: inline-block;
-    background: url("/assets/icons/github.svg");
-    width: 1rem;
-    height: 1rem;
-    vertical-align: sub;
-  }
+// TODO: re-enable when TOS / privacy pages are up
+.legal-links {
+  display: none;
 }
-
 
 @media only screen
 and (max-width: 710px) {
-
   .footer-wrapper {
     display: grid;
     gap: 2.5rem;
