--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1,49 +1,45 @@
 ---
-interface Props {
-}
-
-
+type Props = Record<string, never>;
 ---
-
 <main transition:animate="fade">
   <div class="main-wrapper">
     <slot />
   </div>
 </main>
-<style lang="scss" is:global>
 
+<style lang="scss" is:global>
+h1, h2, h3, h4, h5, h6, p {
+  padding-bottom: 1rem;
+}
+
+* + h1, * + h2, * + h3, * + h4, * + h5, * + h6, * + p {
+  padding-top: 1rem;
+}
+
+p {
+  a {
+    &::before {
+      content: "";
+      position: absolute;
+      top: 100%;
+      width: 100%;
+      left: 0;
+      height: 3px;
+      border-radius: 2px;
+      background-image: var(--accent-gradient);
+    }
+  }
+}
+
+</style>
+
+<style lang="scss">
 main {
   flex: 1;
   padding: 2rem var(--main-padding-lr);
   width: 100%;
-  /* max-width: calc(100% - 2rem); */
   font-size: 20px;
   line-height: 1.6;
-}
-
-.main-wrapper {
-  h1, h2, h3, h4, h5, h6, p {
-    padding-bottom: 1rem;
-  }
-
-  * + h1, * + h2, * + h3, * + h4, * + h5, * + h6, * + p {
-    padding-top: 1rem;
-  }
-
-  p {
-    a {
-      &::before {
-        content: "";
-        position: absolute;
-        top: 100%;
-        width: 100%;
-        left: 0;
-        height: 3px;
-        border-radius: 2px;
-        background-image: var(--accent-gradient);
-      }
-    }
-  }
 }
 
 .attention-error {
@@ -57,16 +53,5 @@ main {
   }
 }
 
-@media only screen
-  and (min-width: 1px)
-  and (max-width: 415px) {
-
-  .main-wrapper {
-    h1, h2, h3, h4, h5, h6 {
-      text-align: left;
-    }
-  }
-
-}
 
 </style>
